QL issues